# dos14-Kot-git-flow

./: .env.example  .gitignore  Dockerfile  Dockerfile_db  Dockerfile_web  Jenkinsfile  README.md  docker-compose.yaml  main.py  main_old.py  pyproject.toml  todo.txt  transactions.csv
Ansible/: inventiry.ini  play.yml  playbook.yml  playdocker-https.yml  playdocker.yml  playserver.yml  to_do.txt
Ansible/group_vars/: test.yml
Ansible/keys/: credentials  db_password  keys  keys.pub
Ansible/keys/13ddd5b3e8e46abec397da83ecfdf925/: meta.json  private_key.json  regr.json
Ansible/roles/install_docker_engine/defaults/: main.yml
Ansible/roles/install_docker_engine/handlers/: main.yml
Ansible/roles/install_docker_engine/tasks/: main.yml
Ansible/roles/install_docker_engine/tests/: test.yml
Ansible/unit/: banktms-https.service  banktms.service
data/: account.csv  credits_deposits.yaml  result.yaml  transactions.csv
default_files/: account.csv
k8s/: namespace.yaml  test_chart.yaml
k8s/argoCD/: application.yaml  project.yaml
k8s/bank/: Chart.yaml  secrets.yaml  values-prd.yaml  values-test.yaml  values.yaml
k8s/bank/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
nginx/: nginx.conf
nginx/conf.d/: bank.conf  bank_ssl.conf
nginx_config/: bank.conf  nginx.conf  server.conf
